<resources>
    <string name="app_name">StudentSQLite</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Marks">Marks</string>
    <string name="buttonadd">Add Data</string>
    <string name="buttonviewall">ViewAll</string>
    <string name="buttonupdate">Update</string>
    <string name="buttondelete">Delete</string>
    <string name="ID">Student ID</string>
    <string name="clear">Clear</string>
    <string name="buttonviewid">View Student</string>
    <string name="blank">" "</string>
</resources>
