<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sahasra.studentsqlite.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FirstName"
            />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fname"
        android:inputType="textPersonName"
        android:paddingBottom="16dp"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LastName"
            />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lname"
        android:inputType="textPersonName"
        android:paddingBottom="16dp"
        />
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Marks"
            />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/marks"
        android:inputType="textPersonName"
        android:paddingBottom="16dp"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ID"
            />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/StudentId"
        android:inputType="textPersonName"
        android:paddingBottom="16dp"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        >

    <Button
        android:paddingTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/buttonadd"
        android:id="@+id/buttonadd"
        android:paddingBottom="16dp"
        />

        <Button
            android:paddingTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/buttonupdate"
            android:id="@+id/buttonupdate"
            android:paddingBottom="16dp"
            />
        <Button
            android:paddingTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttondelete"
            android:id="@+id/buttondelete"
            android:paddingBottom="16dp" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:paddingBottom="16dp">

        <Button
            android:paddingTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonviewall"
            android:id="@+id/buttonviewall"
            android:gravity="end"
            android:paddingBottom="16dp"
            />
        <Button
            android:paddingTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonviewid"
            android:id="@+id/buttonviewid"
            android:gravity="end"
            android:paddingBottom="16dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/buttonclear"
            />

   </LinearLayout>



</LinearLayout>
